--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2018"
 async-std = "1.9.0"
 rand = "0.8.0"
 
-nom = "6"
+nom = "7.1.3"
 
-parking_lot = "0.11.1"
-rusqlite = "0.25.3"
+parking_lot = "0.12.2"
+
+[dependencies.rusqlite]
+version = "0.31.0"
+features = ["bundled"] # must enable this feature to ensure compilation on Windows
 
 [profile.release]
 debug = true
